Make Projects optional & Update Feature References (#693)
* Squash and rebase on master

Squashed commits:
* Update e2e test verify that users can retrieve from multiple featuresets in batch serving
* Add e2e test verify that users can retrieve from multiple featuresets in online serving
* Remove and Reserve version field in FeatureReference in ServingService proto
* Clarify comment in SpecService docs
* Update BQ Retriever to only namespace returned features with featureset only when explictly specified in feature reference.
* Configure BQ Retriever SQL queries to namespace returned feature column with feature set name
* Resolve unresolved rebase markers in Python's SDK client docs
* Squash and Rebase on master
* history:
* Fix batch e2e failing as new SDK does not accept feature refs with projects.
* Fix e2e batch tests: remove rebase markers
* Fix keyerror in end to end tests
* Fix e2e test that still has removed versions
* Correct spelling of omitted in SpecService
* Squash and rebase on version removal PR
* Fix java lint
* Remove comments in JobServiceTest that do not comply with JavaDoc
* Clarify naming of unit test in SpecServiceTest
* Fix python linting
* Refactor AccessManagementService's archiveProject() to use guard clauses
* Update Go SDK to strip the project part of string feature references returned from serving
* Update Java SDK to strip the project part of string feature references returned from serving
* Update Python SDK to strip the project part of string feature references returned from serving
* Fix java unit tests afeter adding check for duplicate feature references
* Remove trailing whitespace to satisfy python lint.
* Fix typo in e2e
* Add check that multiple feature references in get online/batch features don't refer to the same feature
* Fix end to end tests referencing the same feature in different references
* Fix typo in call to get_feature_set in e2e tests.
* Fix issue in e2e test where client persisted wrong project. Should used defaul