@@ -22,9 +22,9 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import com.google.protobuf.TextFormat;
 import feast.proto.serving.ServingAPIProto.FeatureReference;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -33,51 +33,27 @@ import org.junit.jupiter.params.provider.NullSource;
 
 class RequestUtilTest {
 
-  private static Stream<Arguments> provideValidFeatureIds() {
+  private static Stream<Arguments> provideValidFeatureRefs() {
     return Stream.of(
         Arguments.of(
-            Collections.singletonList("driver_project/driver_id"),
-            Collections.singletonList(
-                FeatureReference.newBuilder()
-                    .setProject("driver_project")
-                    .setName("driver_id")
-                    .build())),
-        Arguments.of(
-            Arrays.asList("driver_project/driver_id", "driver_project/driver_name"),
+            Arrays.asList("driver:driver_id", "driver_id"),
             Arrays.asList(
                 FeatureReference.newBuilder()
                     .setProject("driver_project")
+                    .setFeatureSet("driver")
                     .setName("driver_id")
                     .build(),
                 FeatureReference.newBuilder()
                     .setProject("driver_project")
-                    .setName("driver_name")
-                    .build())),
-        Arguments.of(
-            Arrays.asList(
-                "driver_project/driver_id",
-                "driver_project/driver_name",
-                "booking_project/driver_name"),
-            Arrays.asList(
-                FeatureReference.newBuilder()
-                    .setProject("driver_project")
                     .setName("driver_id")
-                    .build(),
-                FeatureReference.newBuilder()
-                    .setProject("driver_project")
-                    .setName("driver_name")
-                    .build(),
-                FeatureReference.newBuilder()
-                    .setProject("booking_project")
-                    .setName("driver_name")
                     .build())));
   }
 
   @ParameterizedTest
-  @MethodSource("provideValidFeatureIds")
-  void createFeatureSets_ShouldReturnFeatureSetsForValidFeatureIds(
+  @MethodSource("provideValidFeatureRefs")
+  void createFeatureSets_ShouldReturnFeatureSetsForValidFeatureRefs(
       List<String> input, List<FeatureReference> expected) {
-    List<FeatureReference> actual = RequestUtil.createFeatureRefs(input, "my-project");
+    List<FeatureReference> actual = RequestUtil.createFeatureRefs(input, "driver_project");
     // Order of the actual and expected featureSets do no not matter
     actual.sort(Comparator.comparing(FeatureReference::getName));
     expected.sort(Comparator.comparing(FeatureReference::getName));
@@ -89,23 +65,35 @@ class RequestUtilTest {
     }
   }
 
+  @ParameterizedTest
+  @MethodSource("provideValidFeatureRefs")
+  void renderFeatureRef_ShouldReturnFeatureRefString(
+      List<String> expected, List<FeatureReference> input) {
+    input =
+        input.stream()
+            .map(ref -> ref.toBuilder().clearProject().build())
+            .collect(Collectors.toList());
+    List<String> actual =
+        input.stream().map(ref -> RequestUtil.renderFeatureRef(ref)).collect(Collectors.toList());
+    assertEquals(expected.size(), actual.size());
+    for (int i = 0; i < expected.size(); i++) {
+      assertEquals(expected.get(i), actual.get(i));
+    }
+  }
+
   private static Stream<Arguments> provideInvalidFeatureRefs() {
-    return Stream.of(
-        Arguments.of(Collections.singletonList("/noproject")),
-        Arguments.of(Collections.singletonList("")));
+    return Stream.of(Arguments.of(List.of("project/feature", "")));
   }
 
   @ParameterizedTest
   @MethodSource("provideInvalidFeatureRefs")
   void createFeatureSets_ShouldThrowExceptionForInvalidFeatureRefs(List<String> input) {
-    assertThrows(
-        IllegalArgumentException.class, () -> RequestUtil.createFeatureRefs(input, "my-project"));
+    assertThrows(IllegalArgumentException.class, () -> RequestUtil.createFeatureRefs(input, ""));
   }
 
   @ParameterizedTest
   @NullSource
   void createFeatureSets_ShouldThrowExceptionForNullFeatureRefs(List<String> input) {
-    assertThrows(
-        IllegalArgumentException.class, () -> RequestUtil.createFeatureRefs(input, "my-project"));
+    assertThrows(IllegalArgumentException.class, () -> RequestUtil.createFeatureRefs(input, ""));
   }
 }
